<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/Home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"/>

    <item
        android:id="@+id/goals"
        android:icon="@drawable/ic_baseline_sports_volleyball_24"
        android:title="@string/goals1"/>

    <item
        android:id="@+id/history"
        android:icon="@drawable/ic_baseline_history_24"
        android:title="@string/history1"/>
    <item
        android:id="@+id/app"
        android:icon="@drawable/ic_baseline_flag_24"
        android:title="@string/apps1"/>

    <item
        android:id="@+id/players"
        android:icon="@drawable/ic_baseline_people_alt_24"
        android:title="@string/players1"/>


</menu>