<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/second_constraint_set"
    android:layout_height="match_parent"
     android:background="@drawable/footpl2">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="toggledMode"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45"
        app:srcCompat="@drawable/plfootball"
        />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next4"
        android:background="@drawable/button_custom"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.825"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.485" />

    <TextView
        android:text="@string/desc_string5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/z_players" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="24sp" android:textColor="@android:color/white" android:background="@android:color/black"
        android:padding="8dp"/>
    <View
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:id="@+id/view2" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintBottom_toTopOf="@+id/z_players" android:background="@drawable/gradient"/>



    <TextView
        android:text="@string/prem2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/wc" android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent" android:textSize="48sp" android:textColor="@android:color/white"
        android:background="@android:color/holo_red_light" android:paddingEnd="8dp" android:paddingStart="8dp"
        app:layout_constraintEnd_toStartOf="parent"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/screentap"
        android:textColor="#FFFAFA"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.349" />

    <Button
        android:id="@+id/buttonback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:background="@drawable/button_custom"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.825"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.627" />


</android.support.constraint.ConstraintLayout>