<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="@color/lightOrange">


    <TextView
        android:id="@+id/online_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="124dp"
        android:gravity="center"
        android:text="@string/online_info1"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/pl_online"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/pl_online"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_custom"
        android:textColor="@android:color/white"
        android:text="@string/premier_leauge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.44" />

    <Button
        android:id="@+id/fwc_online"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_custom"
        android:textColor="@android:color/white"
        android:text="@string/world_cup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53" />

    <Button
        android:id="@+id/fp_online"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_custom"
        android:textColor="@android:color/white"
        android:text="@string/foreign_players"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.62" />

    <Button
        android:id="@+id/ss_online"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_custom"
        android:textColor="@android:color/white"
        android:text="@string/premier_league_shirt_sponsors"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.71000004" />

    <Button
        android:id="@+id/sn_online"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_custom"
        android:textColor="@android:color/white"
        android:text="Premier League Squad Numbers"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <Button
        android:id="@+id/cl_online"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_custom"
        android:text="Champions League"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.89" />


</android.support.constraint.ConstraintLayout>