<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/second_constraint_set"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="TODO"
        android:onClick="toggledMode"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/stadrandom" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="NEXT"
        android:background="@drawable/button_custom"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.86"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.469" />

    <TextView
        android:id="@+id/z_players"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/black"
        android:padding="8dp"
        android:text="@string/zplayersmain"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <View
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:id="@+id/view2" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintBottom_toTopOf="@+id/z_players" android:background="@drawable/gradient"/>

    <TextView
        android:id="@+id/wc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@android:color/holo_red_light"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/zplayers"
        android:textColor="@android:color/white"
        android:textSize="48sp"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/PlayersZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_grad_two"
        android:text="@string/zplayerssub"
        android:textColor="#F6F0F0"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/wc"
        app:layout_constraintEnd_toEndOf="@+id/wc" />

    <Button
        android:id="@+id/buttonback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:background="@drawable/button_custom"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.86"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.59" />
</android.support.constraint.ConstraintLayout>